# sota_ct

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
datasets/: README.md  ct_configs.py  ct_dataset.py  ct_preprocessing_pipeline.py
datasets_explore/: INSPECTION_GUIDE.md  PREPROCESSING_GUIDE.md  analyze_disorders.py  dataset_summary.md  examine_csv.py  explore_dataset.py  explore_dataset_structure.py  inspect_ct_volumes.py  requirements_inspection.txt  run_full_inspection.sh  train_case_disorders.csv_analysis.txt  train_case_disorders.csv_summary.txt  train_case_disorders_explanation.md
datasets_explore/inspection_results_full/: dataset_summary.txt  preprocessing_config.json  quality_issues_temp_100.json  quality_issues_temp_1000.json  quality_issues_temp_10000.json  quality_issues_temp_10100.json  quality_issues_temp_10200.json  quality_issues_temp_10300.json  quality_issues_temp_10400.json  quality_issues_temp_10500.json  quality_issues_temp_10600.json  quality_issues_temp_10700.json  quality_issues_temp_10800.json  quality_issues_temp_10900.json  quality_issues_temp_1100.json  quality_issues_temp_11000.json  quality_issues_temp_11100.json  quality_issues_temp_11200.json  quality_issues_temp_11300.json  quality_issues_temp_11400.json  quality_issues_temp_11500.json  quality_issues_temp_11600.json  quality_issues_temp_11700.json  quality_issues_temp_11800.json  quality_issues_temp_11900.json  quality_issues_temp_1200.json  quality_issues_temp_12000.json  (+423 more)
docs/: DATA_QUALITY_FINDINGS.md
test/: test_ct_dataset.py  test_ct_preprocessing_pipeline.py
(+5 files in other folders)
