[project]
name = "sota-ct"
version = "0.1.0"
description = ""
authors = [
    {name = "Junjie Zhou",email = "menging1122@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "huggingface-hub (>=0.24.0)",
    "pandas (>=1.3.0)",
    "numpy (>=1.20.0)",
    "matplotlib (>=3.4.0)",
    "seaborn (>=0.11.0)",
    "simpleitk (>=2.1.0)",
    "pydicom (>=2.3.0)",
    "nibabel (>=3.2.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
